[B]Version 1.1.116[/B]
- eroticmv - fix playback
- hpjav - fix listing
- porndig - fix playback
- hobbyporn - fix listing