@@ -3,3 +3,5 @@
 - hpjav - fix listing
 - porndig - fix playback
 - hobbyporn - fix listing
+- familypornhd - fix playback
+- perverzija - fix playback
